# ArgOS

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend.yml
BE/: pyproject.toml
BE/app/: backend_pre_start.py  models.py
BE/app/alembic/versions/: 0001_initial.py  0002_domain_tables.py
BE/app/api/: main.py
BE/app/api/routes/: apply.py  hello.py
BE/app/core/: config.py  db.py  storage.py
BE/app/service/: .env.local  README (3).md  README.md  agents.py  checkpointer.py  langgraph.json  models.py  nodes.py  prompt_loader.py  pyproject.toml  tools.py
BE/app/service/inboud_pipeline/: agent.py  prompts.yaml
BE/app/service/inboud_pipeline/utils/: models.py  nodes.py  prompts.py  tools.py
BE/app/service/my_agent/: __init__.py  agent.py
BE/app/service/my_agent/utils/: nodes.py  state.py  tools.py
BE/app/service/validation_pipeline/: agent.py  prompts.yaml
BE/app/service/validation_pipeline/utils/: models.py  nodes.py  prompts.py  tools.py
backend/: .gitignore  .vercelignore  README.md  openapi.json  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_claims.py  0003_sourcing.py  0004_founder_last_claimed_at.py  0005_diligence_market.py  0006_loop_tables.py  0007_drop_dead_columns.py
backend/api/: index.py
backend/app/: api_schemas.py  config.py  db.py  export_openapi.py  ingest.py  main.py  models.py  normalize.py  scheduler.py  text.py
backend/app/claims/: extract.py  run.py  schemas.py  score.py  service.py  trust.py
backend/app/connectors/: base.py
backend/app/eval/: subjects.py
backend/app/inbound/: deck.py  extract.py  service.py
backend/app/market/: graph.py  persist.py  prompts.py  read.py  run.py  schemas.py  service.py
backend/app/memo/: generate.py
backend/app/outbound/: draft.py
backend/app/screening/: __init__.py  assemble.py  founder_axis.py  idea_axis.py  llm.py  trend.py
backend/app/search/: founder_search.py
backend/app/sourcing/: discover.py  fetchers.py  graph.py  jobs.py  persist.py  run.py  schemas.py  seed_data.py  seeds.py  service.py  tavily.py  thesis.py
backend/examples/: discovery_delivery.example.json  discovery_live_output.json  market_live_output.json
backend/tests/: test_claims.py  test_contract.py  test_eval_subjects.py  test_fetchers.py  test_founder_axis.py  test_idea_axis.py  test_inbound.py  test_loop_tables.py  test_normalize.py  test_opportunities_api.py  test_resolution.py  test_text.py
docs/: claims-layer.md  demo-script-60s.md  demo.md  hackathon_eval_criteria.md  market-layer.md
docs/public/: Technical Design Document.md
frontend/: .env.example  README.md  orval.config.ts  package-lock.json  package.json
frontend/src/api/: axios-instance.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/src/app/founders/: page.tsx
frontend/src/app/inbound/: page.tsx
frontend/src/app/opportunities/: page.tsx
frontend/src/app/research/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/sourcing/: page.tsx
frontend/src/components/: app-shell.tsx
frontend/src/components/founders/: claims-list.tsx  founder-detail.tsx  founder-search.tsx  founder-toolbar.tsx  founders-table.tsx  promote-dialog.tsx  score-sparkline.tsx  sort.ts  status.tsx  timeline-item.tsx  trace-timeline.tsx
frontend/src/components/home/: convergence-hero.tsx  stats-band.tsx  team-avatar.tsx  team-section.tsx
frontend/src/components/inbound/: application-form.tsx  apply-dialog.tsx  deck-apply.tsx  inbound-view.tsx
frontend/src/components/market/: axis-card.tsx  entity-cards.tsx  figure-card.tsx  gaps-card.tsx  market-analysis.tsx  market-view.tsx  meta.tsx  opportunity-picker.tsx  section.tsx
frontend/src/components/opportunities/: axis.tsx  memo-section.tsx  opportunities-list.tsx  opportunity-detail.tsx
frontend/src/components/settings/: thesis-view.tsx
frontend/src/components/shell/: footer.tsx  heartbeat-badge.tsx  logo.tsx  nav-bar.tsx
frontend/src/components/sourcing/: channel-list.tsx  discovery-button.tsx  (+5 more)
frontend/src/lib/: format.ts  source-style.ts
(+13 files in other folders)
