[project]
name = "vc-brain-backend"
version = "0.1.0"
description = "VC Brain — sourcing / signal ingestion backend (Challenge 02)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "apscheduler>=3.11",
    "langchain>=1.3.14",
    "langgraph>=1.2.9",
    "langchain-openai>=1.3.5",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
]

# Application project, not a distributable package — uv should not build/install it.
[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Minimal, universal set: pyflakes(F) + pycodestyle(E) + isort(I) + pyupgrade(UP) + bugbear(B).
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query()/etc. in defaults are idiomatic, not the B008 anti-pattern.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Form",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
