[project]
name = "vc-brain-backend"
version = "0.1.0"
description = "VC Brain — sourcing / signal ingestion backend (Challenge 02)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "apscheduler>=3.11",
    "langchain>=1.3.14",
    "langgraph>=1.2.9",
    "langchain-openai>=1.3.5",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pyright>=1.1.411",
]

# Application project, not a distributable package — uv should not build/install it.
[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Minimal, universal set: pyflakes(F) + pycodestyle(E) + isort(I) + pyupgrade(UP) + bugbear(B).
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Tuned LLM prompt templates / Field descriptions — rewrapping would change prompt content.
"app/claims/*" = ["E501"]
"app/screening/idea_axis.py" = ["E501"]
"app/memo/*" = ["E501"]
"app/inbound/extract.py" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query()/etc. in defaults are idiomatic, not the B008 anti-pattern.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
]

[tool.pyright]
# Pre-existing errors in other agents' modules (49 on 2026-07-19), several in files the loop
# must not edit (market/, sourcing/graph.py). Excluded so the gate stays meaningful for new
# code; re-include per file as they get cleaned.
exclude = [
    "app/market",
    "app/sourcing/graph.py",
    "app/sourcing/persist.py",
    "app/sourcing/discover.py",
    "app/sourcing/fetchers.py",
    "app/claims/service.py",
    "app/claims/extract.py",
    "app/ingest.py",
    "tests/test_claims.py",
    ".venv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "dev_bed: needs the shared dev DB with live-sourced eval-bed rows; deselected in CI (-m 'not dev_bed')",
]
