[project]
name = "my-agent"
version = "0.1.0"
description = "LangGraph agent service"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=1.0,<2.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-anthropic>=1.0,<2.0",
    "langsmith>=0.3.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["my_agent"]
